--- a/2023-08-02.md
+++ b/2023-08-02.md
@@ -6,3 +6,10 @@ https://help.salesforce.com/s/articleView?id=000382121&type=1
 System.Assert 接受两个参数，一个（必需）是要测试的条件，另一个是要在条件为 false 时显示的消息（可选）。
 
 System.AssertEquals 和 System.AssertNotEquals 都接受三个参数;前两个（必需）是将测试in/相等的变量，第三个（可选）是断言结果为false时要显示的消息。
+# apex语法
+## String
+| **isBlank(inputString)**                                                                            | **isEmpty(inputString)**                                                              |
+|-----------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------|
+|                                                                                                     |                                                                                       |
+| Returns true if the specified String is white space, empty (''), or null; otherwise, returns false. | Returns true if the specified String is empty ('') or null; otherwise, returns false. |
+| 如果指定的字符串为空格、空 （''） 或 null，则返回 true ;否则，返回 false 。                                                   | 如果指定的字符串为空 （''） 或 null，则返回 true ;否则，返回 false 。                                        |
