add validation rule backup metho

--- a/2023-09-01.md
+++ b/2023-09-01.md
@@ -1,4 +1,10 @@
 - [共享后relate obj无显示](#共享后relate-obj无显示)
+- [关于validationRule](#关于validationrule)
 
 # 共享后relate obj无显示
 排查relate obj是否添加share reson
+
+
+
+# 关于validationRule
+其存在于 custom objects 里面对应类__c.object里面，备份要下载custom objects 对应内容即可
