Refine custom formula for text string matching
Update custom formula to accurately match specific text patterns and
introduce new SQL query to fetch relevant data. The changes ensure
precise matching and data retrieval. (#123)

--- a/2023-12.md
+++ b/2023-12.md
@@ -9,7 +9,11 @@ Returns character from the middle of a text string, given a starting position an
 距离匹配 A1 ，A 1 bc，不匹配 A 11
 此时在 custom formula 
 ```
-if(str!=''&&mid(str,2,1)=' ',mid(str,0,2), //匹配 A1
-if(len(str)>3&&mid(str,1,1)=' ' ,mid(str,0,3)) //匹配{A 1} bc
-,str) // 匹配 【A 1】
+if(str!=''&&mid(str,2,1)=' ',mid(str,0,2), //匹配 【A{num}】
+if(len(str)>3&&mid(str,1,1)=' ' ,mid(str,0,3)) //匹配[A {num} bc]
+,str) // 匹配 【A {num}】，空，非匹配其他字符
+
 ``` 
+```sql
+SELECT Id, str FROM targe where str in ('A1','A 1')
+```
